# tether-pro

./: .gitignore  README.md  main.py
.github/workflows/: codeql.yml
TetherPro/: main.py  requirements.txt  run.ps1  setup.ps1
TetherPro/core/: Cargo.toml
TetherPro/core/src/: lib.rs
TetherPro/data/: manager.py
TetherPro/src/: lib.rs
TetherPro/ui/: app.py  auth.py  components.py
